@@ -1,3 +1,12 @@
+2001-02-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* vectors.h (SCM_VECTOR_MAX_LENGTH):  New macro.
+
+	* vectors.c (scm_make_vector, scm_c_make_vector):  Improved the
+	checking of the size parameter for type correctness and valid
+	range.  Thanks to Rob Browning for reporting the problem.  Instead
+	of deferring interrupts, scm_remember_upto_here_1 is used.
+
 2001-02-05  Keisuke Nishida  <kxn30@po.cwru.edu>
 
 	* dump.c (scm_store_cell_object, scm_restore_cell_object): Removed.
